--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://vividavila98.github.io/",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
