--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.2.0",
     "reactstrap": "^8.1.1",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
